# grimwaves-api

./: .dockerignore  .gitignore  .safety-policy.yml  .trivyignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Makefile  Procfile  README.md  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  trivy.yaml
.cicd/terraform/compute/: README.md  backend.tf  blue_green.tf  droplet.tf  firewall.tf  load_balancer.tf  main.tf  outputs.tf  project.tf  spaces.tf  terraform.tfvars.example  variables.tf  versions.tf  volume.tf  vpc.tf
.cicd/terraform/compute/templates/: cloud-init.sh  cloud-init.yml
.cicd/terraform/vault/: auth.tf  main.tf  outputs.tf  policies.tf  roles.tf  secrets.tf  variables.tf
.github/actions/configure-aws/: action.yml
.github/actions/extract-ssh-public-key/: action.yml
.github/actions/get-runner-ip/: action.yml
.github/actions/get-vault-token/: action.yml
.github/actions/setup-github-ips/: action.yml
.github/actions/setup-python-poetry/: action.yml
.github/actions/setup-vault/: action.yml
.github/workflows/: ci.yml  deploy.yml  destroy.yml
data/: config.json  gothic_letters.json
grimwaves_api/: __init__.py  __main__.py
grimwaves_api/common/: __init__.py
grimwaves_api/common/utils/: __init__.py  asyncio_utils.py  http_client.py  utils.py
grimwaves_api/core/: __init__.py  celery_app.py  settings.py
grimwaves_api/core/logger/: __init__.py  filters.py  logger.py  logging_config.py  middleware.py
grimwaves_api/modules/: __init__.py
grimwaves_api/modules/base/: __init__.py  router.py
grimwaves_api/modules/music/: __init__.py  cache.py  constants.py  helpers.py  retry_strategy.py  router.py  schemas.py  service.py  tasks.py  utils.py
grimwaves_api/modules/music/clients/: __init__.py  deezer.py  musicbrainz.py  spotify.py
grimwaves_api/modules/styler/: __init__.py  models.py  router.py  service.py
scripts/: blue_green_switch.sh  get-vault-ip.sh  load_secrets_from_vault.py  test_deezer_client.py.bkp  test_music_metadata_service.py  test_musicbrainz_client.py.bkp  test_spotify_client.py.bkp  tests.sh
scripts/vault/: cleanup-vault.sh  setup-vault.sh
tests/: conftest.py
tests/e2e/: conftest.py  helpers.py  test_health.py
tests/e2e/music/: test_release_metadata.py
tests/integration/: __init__.py  test_async_stability.py  test_celery_tasks.py  test_log_monitoring.py  test_memory_usage.py  test_service_integration.py  test_stress_testing.py
tests/integration/modules/music/clients/: test_deezer_integration.py
tests/unit/common/utils/: test_asyncio_utils.py  test_http_client.py
tests/unit/modules/music/: test_cache.py  test_helpers.py  test_retry_strategy.py  test_schemas.py  test_service.py  test_tasks.py
tests/unit/modules/music/clients/: test_deezer.py  test_deezer_client.py  test_musicbrainz_client.py  (+1 more)
traefik/: generate-cert.sh  traefik.dev.yml  traefik.yml
traefik/config/: dashboard.yml  dynamic.yml  middlewares.yml
traefik/config/certs/: local-cert.pem  local-key.pem
vault-agent/: Dockerfile  entrypoint.sh
vault-agent/certs/: vault_docker_lab_ca.pem
vault-agent/config/: agent.hcl
vault-agent/templates/: agent.hcl.tpl  env.tpl
(+2 files in other folders)
